// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectPermissionWrapper when projectKey is provided in request when user does not have correct user permissions or system admin fails with 401 and does not call next 1`] = `
Object {
  "message": "User missing expected permission: projects:testkey:stacks:list || system:instance:admin",
}
`;

exports[`projectPermissionWrapper when projectKey not provided fails with a 400 and does not call next 1`] = `
Object {
  "message": "'projectKey' must be defined in either URL or request body when using project permission wrapper.",
}
`;

exports[`systemAdminPermissionWrapper when user is not system admin fails with a 401, error message matching snapshot and does not call next 1`] = `
Object {
  "message": "User missing expected permission: system:instance:admin",
}
`;
